# poetry-poc

./: README.md  main.py  pyproject.toml  requirements.txt
poetry_poc/: __init__.py  __main__.py
