[project]
name = "poetry-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi Ferreira",email = "daviferreiradev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Declare which Python package(s) are part of this project for building and installation
packages = [
    { include = "poetry_poc" }
]

[project.scripts]
# Console entry point installed as `poetry-poc`
"poetry-poc" = "poetry_poc.__main__:main"
