[project]
name = "poetry-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi Ferreira",email = "daviferreira@ioasys.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "*.py" }
]